# Swiq

./: .editorconfig  .gitattributes  .gitignore  .swiq  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  STYLE_GUIDE.md  SUPPORT.md  index.html  language-configuration.json  new.html  new.tsx  package-lock.json  package.json  swiq.tmLanguage.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_proposal.md
.github/workflows/: deploy.yml  test.yml
examples/: .swiq  2.swiq  hello.swiq  mathlib.swiq  test10.swiq  test11.swiq  test12.swiq  test13.swiq  test14.swiq  test2.swiq  test3.swiq  test4.swiq  test5.swiq  test6.swiq  test7.swiq  test8.swiq  test_switcher.swiq
old/: index.html
private_apis/: help.swiq  version.swiq
src/: .swiq  README.md  ast.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  value.cpp  value.h
